packages/transpiler/test/fixtures/errors/exponentiation/input.ts
/**
 * @public
 */
export class Exponent {
    public power(a: number, b: number): number {
        return a ** b;
    }
}
